--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "apirest",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "APIRest | Application Programming Interface REST",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,8 @@
     "pg": "^8.8.0",
     "pm2": "^5.2.2",
     "qrcode": "^1.5.1",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
